# aws-cost-notifier

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  template.yaml
.claude/skills/setup-slack/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
