[project]
name = "aws-cost-notifier"
version = "0.1.0"
description = ""
authors = [
    { name = "zingerbread", email = "tanahashi@hashup.co.jp" },
    { name = "Ryosuke Onose", email = "onose@hashup.co.jp" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.21",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
]
